Fix board overflow issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,8 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
+  overflow: auto !important;
 }
 
 @layer utilities {
